RESOLVED FIXED231024
Regressions (r283288): [ macOS Debug ] webgl/2.0.0/conformance/state/gl-object-get-calls.html is timing out
https://bugs.webkit.org/show_bug.cgi?id=231024
Summary Regressions (r283288): [ macOS Debug ] webgl/2.0.0/conformance/state/gl-objec...
ayumi_kojima
Reported 2021-09-30 09:46:18 PDT
webgl/2.0.0/conformance/state/gl-object-get-calls.html Is timing out on macOS Debug. History: https://results.webkit.org/?suite=layout-tests&test=webgl%2F2.0.0%2Fconformance%2Fstate%2Fgl-object-get-calls.html Result page: https://build.webkit.org/results/Apple-BigSur-Debug-WK2-Tests/r283294%20(4003)/results.html Diff: No diff The test has been timing out on GPU process for a while (Bug 222722).
Attachments
patch (2.12 KB, patch)
2021-09-30 14:13 PDT, Saam Barati
no flags
Radar WebKit Bug Importer
Comment 1 2021-09-30 09:46:37 PDT
ayumi_kojima
Comment 2 2021-09-30 09:47:32 PDT
webgl/2.0.0/conformance/ogles/GL/atan/atan_009_to_012.html might have the same root cause since this test recently started timing out on macOS Debug. History: https://results.webkit.org/?suite=layout-tests&test=webgl%2F2.0.0%2Fconformance%2Fogles%2FGL%2Fatan%2Fatan_009_to_012.html
ayumi_kojima
Comment 3 2021-09-30 11:46:24 PDT
I was able to reproduce the timeout with run-webkit-tests --debug webgl/2.0.0/conformance/state/gl-object-get-calls.html with revisions before r283288, but the test passed with r283287 and after. Tested with r283211 just to make sure because there is one off timeout in the history on BigSur wk2 Debug at r283211, but the test didn't time out locally.
Saam Barati
Comment 4 2021-09-30 14:13:47 PDT
Mark Lam
Comment 5 2021-09-30 14:17:06 PDT
Comment on attachment 439779 [details] patch r=me
ayumi_kojima
Comment 6 2021-09-30 15:44:57 PDT
(In reply to ayumi_kojima from comment #3) > I was able to reproduce the timeout with run-webkit-tests --debug > webgl/2.0.0/conformance/state/gl-object-get-calls.html with revisions before > r283288, but the test passed with r283287 and after. > > Tested with r283211 just to make sure because there is one off timeout in > the history on BigSur wk2 Debug at r283211, but the test didn't time out > locally. Came back to this bug and read my comment again and thought it was confusing. I meant r283288 and newer reproduced but r283287 and older didn't reproduce. It doesn't matter any more but thought I should clarify.
EWS
Comment 7 2021-09-30 16:06:28 PDT
Committed r283344 (242359@main): <https://commits.webkit.org/242359@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 439779 [details].
ayumi_kojima
Comment 8 2021-10-22 15:22:08 PDT
Confirmed the test is passing now. Constant timeout on Catalina gpuprocess is not related to this change. It has been tracked in https://bugs.webkit.org/show_bug.cgi?id=222722
Note You need to log in before you can comment on or make changes to this bug.