Regressions (r283288): [ macOS Debug ] webgl/2.0.0/conformance/state/gl-object-get-calls.html is timing out https://bugs.webkit.org/show_bug.cgi?id=231024 <rdar://problem/83723856>

Reviewed by Mark Lam.

Speed up our debug assert by not using a probe.

* jit/JIT.cpp:
(JSC::JIT::privateCompileMainPass):


Canonical link: https://commits.webkit.org/242359@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283344 268f45cc-cd09-0410-ab3c-d52691b4dbfc